# Reproduce_minimind

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LOSS_ANALYSIS.md  TRAINING_OPTIMIZATION.md  analyze_training_log.py  chat.py  check_ddp_port.py  count_tokens.py  debug_loss.py  diagnose_loss.py  main.py  pyproject.toml  setup_env.bat  setup_env.py  setup_env.sh  test_gpu_detection.py  test_pretrained_model.py  test_syntax.py  下载.txt
dataset/: lm_dataset.py
docs/: engineering_review.md
model/: model_lora.py  model_minimind.py  tokenizer.json  vocab.json
scripts/: train_tokenizer.py
triainer/: train_dpo.py  train_full_sft.py  train_lora.py  train_pretrian.py
utils/: __init__.py  reproducibility.py
